# ModelWidget

project/: CMakeLists.txt
project/src/: CMakeLists.txt  ModelWidget.cpp  ModelWidget.h  modelwidget_global.h
project/test/: CMakeLists.txt  main.cpp  modelwidgettest.cpp  modelwidgettest.h  modelwidgettest.qrc
