CMAKE_MINIMUM_REQUIRED(VERSION 3.0)

PROJECT( ModelWidget )

# For CMake
set(CMAKE_INCLUDE_CURRENT_DIR ON)

# Qt
FIND_PACKAGE( Qt5Widgets REQUIRED )
# INCLUDE_DIRECTORIES( ${Qt5Widgets_INCLUDE_DIRS} )


# OpenCV
FIND_PACKAGE( OpenCV REQUIRED )
IF ( OpenCV_FOUND )
  INCLUDE_DIRECTORIES( ${OpenCV_INCLUDE_DIRS} )
ENDIF()

FIND_PACKAGE( OpenGL )

# TARGET
ADD_DEFINITIONS( -DMODELWIDGET_LIB )

FILE( GLOB SRCS "*.cpp" )
FILE( GLOB QTUI_HEADERS "*.h" )
QT5_WRAP_CPP( QTUI_HEADERS_MOC ${QTUI_HEADERS}) 


ADD_LIBRARY( ModelWidget SHARED ${SRCS} ${QTUI_HEADERS_MOC} )
TARGET_LINK_LIBRARIES( ModelWidget ${Qt5Widgets_LIBRARIES} )
TARGET_LINK_LIBRARIES( ModelWidget ${OpenCV_LIBRARIES} )
TARGET_LINK_LIBRARIES( ModelWidget ${OPENGL_LIBRARIES} )
QT5_USE_MODULES( ModelWidget Widgets GUI OpenGL )