CMAKE_MINIMUM_REQUIRED(VERSION 3.0)

PROJECT( ModelWidgetTest )

# Qt
FIND_PACKAGE( Qt5Widgets REQUIRED )
# INCLUDE_DIRECTORIES( ${Qt5Widgets_INCLUDE_DIRS} )


# OpenCV
FIND_PACKAGE( OpenCV REQUIRED )
IF ( OpenCV_FOUND )
  INCLUDE_DIRECTORIES( ${OpenCV_INCLUDE_DIRS} )
ENDIF()


# ModelWidget
INCLUDE_DIRECTORIES( ../src )

# TARGET
FILE( GLOB SRCS "*.cpp" )
FILE( GLOB QTUI_HEADERS "*.h" )
QT5_WRAP_CPP( QTUI_HEADERS_MOC ${QTUI_HEADERS})

ADD_EXECUTABLE( ModelWidgetTest ${SRCS} ${QTUI_HEADERS_MOC} )
TARGET_LINK_LIBRARIES( ModelWidgetTest ModelWidget )
QT5_USE_MODULES( ModelWidgetTest Widgets Test OpenGL )